--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "flowbite": "^2.5.2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.5"
   },
@@ -18,10 +19,13 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.13",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.4.6"
   }
